Message from clients added to all client UIs

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <p id="received-message"></p>
     <input type="text" id="message-text" name="message" />
     <button id="submit-button">Send Message</button>
+    <div>
+      <ul id="message-thread"></ul>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/chat.js"></script>
   </body>
