Simple UI tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,10 @@
   <body>
     <main id="main-container">
       <div class="row">
-        <h2 class="flex-item">Chat Application</h2>
-        <h4 id="received-message" class="flex-item"></h4>
+        <div id="heading">
+          <h2 class="flex-item">Chat Application</h2>
+          <h4 id="received-message" class="flex-item"></h4>
+        </div>
         <div>
           <textarea
             id="message-text"
