--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/snackbar.css" />
     <title>WebSocket Chat</title>
   </head>
   <body>
@@ -25,6 +26,7 @@
       </div>
       <ul id="message-thread" class="flex-item"></ul>
     </main>
+    <div id="snackbar">A New User Has Joined The Chat</div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/chat.js"></script>
   </body>
