active room count main page

--- a/public/index.html
+++ b/public/index.html
@@ -30,5 +30,7 @@
         </div>
       </form>
     </main>
+    <div id="room-count" class="room-counter"></div>
+    <script src="./js/updateRoomCount.js"></script>
   </body>
 </html>
