Style + user list

--- a/public/chat.html
+++ b/public/chat.html
@@ -32,6 +32,11 @@
       </button>
     </div>
     <ul id="message-thread"></ul>
+    <div id="active-users-list">
+      <h3>Current Users</h3>
+      <ul id="users-list">
+      </ul>
+    </div>
   </main>
   <div id="snackbar"></div>
   <script src="/socket.io/socket.io.js"></script>
