--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,9 @@
         <label for="userName">Display Name: </label>
         <input class="join-input" type="text" name="username" id="username-input" required readonly="readonly" />
         <label for="room-name">Room:</label>
-        <input class=" join-input" type="text" name="room" placeholder="Main" required />
+        <select name="room" id="room-select">
+
+        </select>
         <button id="submit-button">Join!</button>
       </div>
     </form>
