--- a/html/signup.html
+++ b/html/signup.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/snackbar.css" />
     <title>Create an Account</title>
 </head>
 
@@ -30,6 +31,7 @@
             <button id="submit-button">Sign Up</button>
         </form>
         <p id="message"></p>
+        <div id="snackbar"></div>
     </main>
     <script src="./js/signUp.js"></script>
 </body>
