--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 <body>
   <main id="index-main">
     <form action="/chat" method="GET">
-      <div>
+      <div id="join-room-div">
         <h1 id="index-header">Join a Room</h1>
         <label for="userName">Display Name: </label>
         <input class="join-input" type="text" name="username" id="username-input" required readonly="readonly" />
@@ -23,7 +23,7 @@
         <button id="submit-button">Join!</button>
       </div>
     </form>
-    <div id="room-count" class="room-counter"></div>
+    <div id="room-count"></div>
   </main>
   <script src="./js/updateRoomCount.js"></script>
 </body>
