Init implementation of fetch older messages. Needs heavy refactor, but seems to work.

--- a/html/chat.html
+++ b/html/chat.html
@@ -18,6 +18,9 @@
       <span class="console-underscore" id="console-cursor">&#95;&#95;</span>
       <h4 id="received-message"></h4>
     </div>
+    <button id="fetch-older-messages">
+      Get Older Messages
+    </button>
     <div id="parent-message-text">
       <div id="child-message-text">
         <textarea id="message-text" name="message-area"></textarea>
@@ -31,6 +34,7 @@
         Send location
       </button>
     </div>
+
     <ul id="message-thread"></ul>
     <div id="active-users-list">
       <h3>Current Users</h3>
