Filtering messages init

--- a/html/chat.html
+++ b/html/chat.html
@@ -18,6 +18,7 @@
       <span class="console-underscore" id="console-cursor">&#95;&#95;</span>
       <h4 id="received-message"></h4>
     </div>
+    <input type="search" name="filter messages" id="filter-messages" placeholder="Search Messages" />
     <button id="fetch-older-messages">
       Get Older Messages
     </button>
