Upload file to S3 implemented both client and server.

--- a/html/chat.html
+++ b/html/chat.html
@@ -34,6 +34,10 @@
       <button id="share-location-button">
         Send location
       </button>
+      <div id="file-upload-div">
+        <input type="file" name="upload" id="file-upload-input">
+      </div>
+
     </div>
 
     <ul id="message-thread"></ul>
