--- a/html/chat.html
+++ b/html/chat.html
@@ -46,6 +46,15 @@
       <ul id="users-list">
       </ul>
     </div>
+    <div id="pm-div">
+      <ul id="pm-users-list">
+      </ul>
+      <ul id="pm-list">
+      </ul>
+      <input type="text" name="pm-textarea" id="pm-textarea">
+      <button id="pm-send-button">Send PM</button>
+    </div>
+    <button id="pm-display-button">Show PMs</button>
   </main>
   <div id="snackbar"></div>
   <script src="/socket.io/socket.io.js"></script>
