--- a/html/chat.html
+++ b/html/chat.html
@@ -46,7 +46,7 @@
       <ul id="users-list">
       </ul>
     </div>
-    <div id="pm-div">
+    <div id="pm-div" class="hidden">
       <ul id="pm-users-list">
       </ul>
       <ul id="pm-list">
@@ -54,7 +54,7 @@
       <input type="text" name="pm-textarea" id="pm-textarea">
       <button id="pm-send-button">Send PM</button>
     </div>
-    <button id="pm-display-button">Show PMs</button>
+    <button id="pm-display-button">Toggle PMs View</button>
   </main>
   <div id="snackbar"></div>
   <script src="/socket.io/socket.io.js"></script>
