--- a/html/chat.html
+++ b/html/chat.html
@@ -58,7 +58,7 @@
   </main>
   <div id="snackbar"></div>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="./js/chat.js"></script>
+  <script type="module" src="./js/chat.js"></script>
   <script src="./js/terminalTextRender.js"></script>
 </body>
 
