--- a/html/chat.html
+++ b/html/chat.html
@@ -35,6 +35,7 @@
         Send location
       </button>
       <div id="file-upload-div">
+        <p id="share-file">Share a file</p>
         <input type="file" name="upload" id="file-upload-input">
       </div>
 
