Initial color toggle

--- a/html/chat.html
+++ b/html/chat.html
@@ -56,6 +56,14 @@
       <button id="pm-send-button">Send PM</button>
     </div>
     <button id="pm-display-button">Toggle PMs View</button>
+    <div class="dropdown">
+      <button class="dropbtn">Toggle Primary Color</button>
+      <div class="dropdown-content">
+        <button id="blue-option">Blue</button>
+        <button id="green-option">Green</button>
+        <button id="orange-option">Orange</button>
+        <button id="purple-option">Purple</button>
+      </div>
   </main>
   <div id="snackbar"></div>
   <script src="/socket.io/socket.io.js"></script>
