Toggle 'focus' mode

--- a/html/chat.html
+++ b/html/chat.html
@@ -56,7 +56,7 @@
       <button id="pm-send-button">Send PM</button>
     </div>
     <button id="pm-display-button">Toggle PMs View</button>
-    <div class="dropdown">
+    <div id="dropdown" class="dropdown">
       <button class="dropbtn">Toggle Primary Color</button>
       <div class="dropdown-content">
         <button id="blue-option">Blue</button>
