Added script for logout

--- a/html/index.html
+++ b/html/index.html
@@ -22,9 +22,11 @@
         <button id="submit-button">Join!</button>
       </div>
     </form>
+    <button id="logout-button">Logout</button>
     <div id="room-count"></div>
   </main>
   <script src="./js/updateRoomCount.js"></script>
+  <script src="./js/logout.js"></script>
 </body>
 
 </html>
