--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <main id="index-main">
+    <h1 id="main-heading"><span class="title-heading">TelegraF</span></h1>
     <form action="/chat" method="GET">
       <div id="join-room-div">
         <h1 id="index-header">Join a Room</h1>
