--- a/html/login.html
+++ b/html/login.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/snackbar.css" />
-    <title>Login to Start Chatting</title>
+    <title>Welcome to TelegraF</title>
 </head>
 
 <body>
     <main id="index-main">
+        <h1 id="main-heading">Welcome to <span class="title-heading">TelegraF</span></h1>
         <form id="login-form">
             <h1 id="index-header">Login and start chatting!</h1>
             <ul id="sign-up-list">
