--- a/html/signup.html
+++ b/html/signup.html
@@ -12,6 +12,7 @@
 
 <body>
     <main id="index-main">
+        <h1 id="main-heading">Join <span class="title-heading">TelegraF</span></h1>
         <form id="sign-up-form">
             <h1 id="index-header">Join and start chatting now!</h1>
             <ul id="sign-up-list">
