--- a/html/index.html
+++ b/html/index.html
@@ -20,8 +20,10 @@
         <label for="room-name">Room:</label>
         <select name="room" id="room-select">
         </select>
-        <button id="submit-button">Join!</button>
-        <button id="create-room-button">Create a new Room</button>
+        <div id="button-div">
+          <button id="submit-button">Join!</button>
+          <button id="create-room-button">Create a new Room</button>
+        </div>
       </div>
     </form>
     <button id="logout-button">Logout</button>
