logo add and fix broken focus toggle

--- a/html/chat.html
+++ b/html/chat.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <span id="chat-title-heading" class="title-heading">TelegraF</span>
   <main id="main-container" class="moving">
     <div id="heading" class="console-container">
       <h1 id="main-header"></h1>
@@ -27,7 +28,7 @@
         <textarea id="message-text" name="message-area"></textarea>
       </div>
     </div>
-    <div id="button-div">
+    <div id="chat-button-div">
       <button id="submit-button" class="moving">
         Send Message
       </button>
