init admin check api

--- a/html/channel.html
+++ b/html/channel.html
@@ -17,6 +17,9 @@
         <ul id="channel-posts"></ul>
     </main>
     <!-- <svg id="canvas"></svg> -->
+    <div id="channel-post-parent" class="no-display">
+        <textarea name="channel-post" id="channel-post-input" cols="30" rows="10"></textarea>
+    </div>
 </body>
 
 </html>
