--- a/html/login.html
+++ b/html/login.html
@@ -14,18 +14,20 @@
     <main id="index-main">
         <h1 id="main-heading">Welcome to <span class="title-heading">TelegraF</span></h1>
         <form id="login-form">
-            <h1 id="index-header">Login and start chatting!</h1>
-            <ul id="sign-up-list">
-                <li>
-                    <label for="mail">E-mail:</label>
-                    <input class=" join-input" type="email" id="email" name="user-email">
-                </li>
-                <li>
-                    <label for="password">Password:</label>
-                    <input type="password" class="join-input" id="password" name="user-password" />
-                </li>
-            </ul>
-            <button id="submit-button">Log in</button>
+            <div id="button-parent">
+                <h1 id="index-header">Login and start chatting!</h1>
+                <ul id="sign-up-list">
+                    <li>
+                        <label for="mail">E-mail:</label>
+                        <input class=" join-input" type="email" id="email" name="user-email">
+                    </li>
+                    <li>
+                        <label for="password">Password:</label>
+                        <input type="password" class="join-input" id="password" name="user-password" />
+                    </li>
+                </ul>
+                <button id="submit-button">Log in</button>
+            </div>
         </form>
         <div id="snackbar"></div>
         <a href="/signup">New user? Join</a>
