--- a/html/signup.html
+++ b/html/signup.html
@@ -14,22 +14,24 @@
     <main id="index-main">
         <h1 id="main-heading">Join <span class="title-heading">TelegraF</span></h1>
         <form id="sign-up-form">
-            <h1 id="index-header">Join and start chatting now!</h1>
-            <ul id="sign-up-list">
-                <li>
-                    <label for="name">Name:</label>
-                    <input class=" join-input" type="text" id="name" name="user-name">
-                </li>
-                <li>
-                    <label for="mail">E-mail:</label>
-                    <input class=" join-input" type="email" id="email" name="user-email">
-                </li>
-                <li>
-                    <label for="password">Password:</label>
-                    <input type="password" class="join-input" id="password" name="user-password" />
-                </li>
-            </ul>
-            <button id="submit-button">Sign Up</button>
+            <div id="button-parent">
+                <h1 id="index-header">Join and start chatting now!</h1>
+                <ul id="sign-up-list">
+                    <li>
+                        <label for="name">Name:</label>
+                        <input class=" join-input" type="text" id="name" name="user-name">
+                    </li>
+                    <li>
+                        <label for="mail">E-mail:</label>
+                        <input class=" join-input" type="email" id="email" name="user-email">
+                    </li>
+                    <li>
+                        <label for="password">Password:</label>
+                        <input type="password" class="join-input" id="password" name="user-password" />
+                    </li>
+                </ul>
+                <button id="submit-button">Sign Up</button>
+            </div>
         </form>
         <p id="message"></p>
         <div id="snackbar"></div>
