--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,10 @@
       <input type="text" name="room-name" id="room-name-input" placeholder="Enter a room name">
       <button id="submit-room-name">Create</button>
     </div>
-    <div id="room-count"></div>
+    <div id="counter-parent">
+      <div id="room-count"></div>
+      <div id="channel-count"></div>
+    </div>
   </main>
 
   <script src="./js/updateRoomCount.js"></script>
