toasts for new rooms and channels

--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,7 @@
     <div id="counter-parent">
       <div id="room-count"></div>
       <div id="channel-count"></div>
+      <div id="toastElement">Toast</div>
     </div>
   </main>
 
