messing with styling messes

--- a/html/chat.html
+++ b/html/chat.html
@@ -28,8 +28,9 @@
         <textarea id="message-text" name="message-area"></textarea>
       </div>
     </div>
+
     <div id="chat-button-div">
-      <button id="submit-button" class="moving">
+      <button id="submit-button">
         Send Message
       </button>
       <button id="share-location-button">
@@ -39,7 +40,6 @@
         <p id="share-file">Share a file</p>
         <input type="file" name="upload" id="file-upload-input">
       </div>
-
     </div>
 
     <ul id="message-thread"></ul>
