redis feature updated

--- a/html/index.html
+++ b/html/index.html
@@ -36,13 +36,19 @@
       <button id="submit-room-name">Create</button>
     </div>
   </main>
+
+
   <div id="counter-parent">
     <div id="room-count"></div>
+    <ul id="updates-list">
+      <li>Updates List</li>
+    </ul>
     <div id="channel-count"></div>
   </div>
 
   <script src="./js/updateRoomCount.js"></script>
   <script src="./js/logout.js"></script>
+  <script src="./js/subscribeUpdates.js"></script>
 </body>
 
 </html>
