--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
   <div id="counter-parent">
     <div id="room-count"></div>
     <ul id="updates-list">
-      <li>Updates List</li>
+      <li>What's Happening?</li>
     </ul>
     <div id="channel-count"></div>
   </div>
