--- a/html/channel.html
+++ b/html/channel.html
@@ -18,7 +18,8 @@
     </main>
     <!-- <svg id="canvas"></svg> -->
     <div id="channel-post-parent" class="no-display">
-        <h3 id="char-count-parent">Character count: <span id="char-counter">0</span></h3>
+        <h3 id="char-count-parent">Character count: <span id="char-counter">0</span><button id="submit-btn">Submit
+                Post</button></h3>
         <textarea name="channel-post" id="channel-post-input" cols="30" rows="10"></textarea>
     </div>
 </body>
